new workspace model impl
