# openapi.yml
@@ -73,6 +73,75 @@ paths:
       responses:
         '200':
           description: Job deleted
+  /workspaces:
+    get:
+      summary: Get all workspaces
+      responses:
+        '200':
+          description: A list of workspaces
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Workspace'
+    post:
+      summary: Create a new workspace
+      requestBody:
+        description: Workspace object that needs to be added
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Workspace'
+      responses:
+        '201':
+          description: Workspace created
+  /workspaces/{id}:
+    get:
+      summary: Get a workspace by ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Workspace details
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Workspace'
+    put:
+      summary: Update a workspace by ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        description: Workspace object that needs to be updated
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Workspace'
+      responses:
+        '200':
+          description: Workspace updated
+    delete:
+      summary: Delete a workspace by ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Workspace deleted
 components:
   schemas:
     Job:
@@ -97,3 +166,53 @@ components:
         datePosted:
           type: string
           format: date-time
+    Workspace:
+      type: object
+      required:
+        - name
+        - address
+        - details
+        - cost
+      properties:
+        name:
+          type: string
+        address:
+          type: object
+          properties:
+            firstLine:
+              type: string
+            secondLine:
+              type: string
+            postcode:
+              type: string
+            city:
+              type: string
+            country:
+              type: string
+            continent:
+              type: string
+        details:
+          type: object
+          properties:
+            email:
+              type: string
+            number:
+              type: string
+        cost:
+          type: number
+        amenities:
+          type: array
+          items:
+            type: string
+        reviews:
+          type: array
+          items:
+            type: object
+            properties:
+              user:
+                type: string
+              rating:
+                type: number
+              comment:
+                type: string
+                
